Corrections:
    + If the value was nullable and the query included that key with "$gt", "$lt" & "$text" filter - server crashed